--- a/1.1_using_jupyter/using_jupyter_(need).ipynb
+++ b/1.1_using_jupyter/using_jupyter_(need).ipynb
@@ -1,1 +1,388 @@
-{"cells": [{"cell_type": "markdown", "id": "123456", "metadata": {}, "attachments": {}, "source": ["<div style=\"text-align:left;font-size:2em\"><span style=\"font-weight:bolder;font-size:1.25em\">SP2273 | Learning Portfolio</span><br><br><span style=\"font-weight:bold;color:darkred\">Using Jupyter (Need)</span></div>"]}, {"cell_type": "markdown", "id": "123456", "metadata": {}, "attachments": {}, "source": ["# What to expect in this chapter"]}, {"cell_type": "markdown", "id": "123456", "metadata": {}, "attachments": {}, "source": ["# 1 Getting ready"]}, {"cell_type": "markdown", "id": "123456", "metadata": {}, "attachments": {}, "source": ["# 2 Getting started with Jupyter"]}, {"cell_type": "markdown", "id": "123456", "metadata": {}, "attachments": {}, "source": ["## 2.1 It is all about running cells"]}, {"cell_type": "markdown", "id": "123456", "metadata": {}, "attachments": {}, "source": ["## 2.2 A traditional start"]}, {"cell_type": "markdown", "id": "123456", "metadata": {}, "attachments": {}, "source": ["# 3 All about Markdown"]}, {"cell_type": "markdown", "id": "123456", "metadata": {}, "attachments": {}, "source": ["## 3.1 Rendering Markdown cells"]}, {"cell_type": "markdown", "id": "123456", "metadata": {}, "attachments": {}, "source": ["## 3.2 Some basic syntax"]}, {"cell_type": "markdown", "id": "123456", "metadata": {}, "attachments": {}, "source": ["## 3.3 Headings"]}, {"cell_type": "markdown", "id": "123456", "metadata": {}, "attachments": {}, "source": ["## 3.4 Displaying Code"]}, {"cell_type": "markdown", "id": "123456", "metadata": {}, "attachments": {}, "source": ["## 3.5 Links"]}, {"cell_type": "markdown", "id": "123456", "metadata": {}, "attachments": {}, "source": ["## 3.6 Images"]}, {"cell_type": "markdown", "id": "123456", "metadata": {}, "attachments": {}, "source": ["## 3.7 Tables"]}, {"cell_type": "markdown", "id": "123456", "metadata": {}, "attachments": {}, "source": ["## 3.8 Lists"]}, {"cell_type": "markdown", "id": "123456", "metadata": {}, "attachments": {}, "source": ["## 3.9 Equations"]}, {"cell_type": "markdown", "id": "123456", "metadata": {}, "attachments": {}, "source": ["## Footnotes"]}], "metadata": {"kernelspec": {"display_name": "Python 3", "language": "python", "name": "python3"}, "language_info": {"codemirror_mode": {"name": "ipython", "version": 3}, "file_extension": ".py", "mimetype": "text/x-python", "name": "python", "nbconvert_exporter": "python", "pygments_lexer": "ipython3", "version": "3.10.6 (main, Nov 14 2022, 16:10:14) [GCC 11.3.0]"}, "toc": {"base_numbering": 1, "nav_menu": {}, "number_sections": true, "sideBar": true, "skip_h1_title": false, "title_cell": "Table of Contents", "title_sidebar": "Contents", "toc_cell": false, "toc_position": {}, "toc_section_display": true, "toc_window_display": false}, "vscode": {"interpreter": {"hash": "31f2aee4e71d21fbe5cf8b01ff0e069b9275f58929596ceb00d14d90e3e16cd6"}}}, "nbformat": 4, "nbformat_minor": 5}
+{
+ "cells": [
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "id": "123456",
+   "metadata": {},
+   "source": [
+    "<div style=\"text-align:left;font-size:2em\"><span style=\"font-weight:bolder;font-size:1.25em\">SP2273 | Learning Portfolio</span><br><br><span style=\"font-weight:bold;color:darkred\">Using Jupyter (Need)</span></div>"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "id": "123456",
+   "metadata": {},
+   "source": [
+    "# What to expect in this chapter"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "id": "123456",
+   "metadata": {},
+   "source": [
+    "# 1 Getting ready"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "id": "123456",
+   "metadata": {},
+   "source": [
+    "# 2 Getting started with Jupyter"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "id": "123456",
+   "metadata": {},
+   "source": [
+    "## 2.1 It is all about running cells"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "id": "123456",
+   "metadata": {},
+   "source": [
+    "## 2.2 A traditional start"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "id": "123456",
+   "metadata": {},
+   "source": [
+    "# 3 All about Markdown"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "id": "123456",
+   "metadata": {},
+   "source": [
+    "## 3.1 Rendering Markdown cells"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "id": "123456",
+   "metadata": {},
+   "source": [
+    "## 3.2 Some basic syntax"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e776d5e9",
+   "metadata": {},
+   "source": [
+    "**BOLD** # bold uses **  ** or __ (double underscore)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e59323c6",
+   "metadata": {},
+   "source": [
+    "*ITALIC* # italic uses * * or _ (single underscore)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "668e558b",
+   "metadata": {},
+   "source": [
+    "***ALL BOLD AND ITALIC*** # all bold and italic uses ***  *** "
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "id": "123456",
+   "metadata": {},
+   "source": [
+    "## 3.3 Headings"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "2cc94757",
+   "metadata": {},
+   "source": [
+    "# Largest Heading uses 1x hashtag"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "fc86e81f",
+   "metadata": {},
+   "source": [
+    "## Second Largest Heading uses 2x hashtag"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f7a4fbd7",
+   "metadata": {},
+   "source": [
+    "### Third Largest Heading uses 3x hashtag"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "67a94e49",
+   "metadata": {},
+   "source": [
+    "#### The Smallest Heading uses 4x hashtag"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "id": "123456",
+   "metadata": {},
+   "source": [
+    "## 3.4 Displaying Code"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "0d8d9ebf",
+   "metadata": {},
+   "source": [
+    "``` python\n",
+    "print('Hello World!')\n",
+    "```\n",
+    "#use triple backticks ``` at the start and end to display a block of code"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "7f684803",
+   "metadata": {},
+   "source": [
+    "Use `print('Hello World!')` to display text # use ` at start and end to display code inside a text"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "id": "123456",
+   "metadata": {},
+   "source": [
+    "## 3.5 Links"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "aeb6bb6e",
+   "metadata": {},
+   "source": [
+    "To underline url text, use < u > at the start and end of the text"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "3d132ed6",
+   "metadata": {},
+   "source": [
+    "[<u>SP2273 Website<u>](https://sps.nus.edu.sg/sp2273)"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "id": "123456",
+   "metadata": {},
+   "source": [
+    "## 3.6 Images"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a5afef3f",
+   "metadata": {},
+   "source": [
+    "Syntax for images is ! [] ( URL )"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "bbdf416f",
+   "metadata": {},
+   "source": [
+    "![](https://nus.edu.sg/images/default-source/base/logo.png)"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "id": "123456",
+   "metadata": {},
+   "source": [
+    "## 3.7 Tables"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b16836f0",
+   "metadata": {},
+   "source": [
+    "| Column 1 | Column 2 |\n",
+    "| :--: | :--: |\n",
+    "| a1 | b1 |"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "dd53e0da",
+   "metadata": {},
+   "source": [
+    "| Header 1 (Left)| Header 2 | Header 3 (Right) |\n",
+    "| :--- | :---: | ---: |\n",
+    "| 1 | 2 | 3|\n",
+    "|a1|a2|a3|"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "id": "123456",
+   "metadata": {},
+   "source": [
+    "## 3.8 Lists"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "eff7eafe",
+   "metadata": {},
+   "source": [
+    "1. Master Yoda\n",
+    "2. Luke skywalker\n",
+    "3. Anakin skywalker"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f1967ad8",
+   "metadata": {},
+   "source": [
+    "- master yoda\n",
+    "- master luke\n",
+    "- master anakin"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "id": "123456",
+   "metadata": {},
+   "source": [
+    "## 3.9 Equations"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "272e39b3",
+   "metadata": {},
+   "source": [
+    "$$\n",
+    "x = \\dfrac{-b \\pm \\sqrt{b^2-4ac}}{2a}\n",
+    "$$"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "f210358b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# \\sin\n",
+    "# \\cos\n",
+    "# \\tan\n",
+    "# \\log\n",
+    "# \\log\n",
+    "# \\exp"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "208d721a",
+   "metadata": {},
+   "source": [
+    "$\\lim_{x \\to 0}$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "dd0a96d9",
+   "metadata": {},
+   "source": [
+    "$ a \\ne b $"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "2ceb3e88",
+   "metadata": {},
+   "source": [
+    "$$ \\mu = \\dfrac{1}{n} \\sum_{i=1}^{n} x_{i} $$"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "id": "123456",
+   "metadata": {},
+   "source": [
+    "## Footnotes"
+   ]
+  }
+ ],
+ "metadata": {
+  "kernelspec": {
+   "display_name": "base",
+   "language": "python",
+   "name": "python3"
+  },
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.13.11"
+  },
+  "toc": {
+   "base_numbering": 1,
+   "nav_menu": {},
+   "number_sections": true,
+   "sideBar": true,
+   "skip_h1_title": false,
+   "title_cell": "Table of Contents",
+   "title_sidebar": "Contents",
+   "toc_cell": false,
+   "toc_position": {},
+   "toc_section_display": true,
+   "toc_window_display": false
+  }
+ },
+ "nbformat": 4,
+ "nbformat_minor": 5
+}
