--- a/2.1_fundamentals/fundamentals_(need).ipynb
+++ b/2.1_fundamentals/fundamentals_(need).ipynb
@@ -1213,6 +1213,70 @@
    "source": [
     "conda list"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ab3765b0",
+   "metadata": {},
+   "source": [
+    "## More Example with Math package"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "fbe2bdc6",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "sin(180 degree): 1.2246467991473532e-16\n"
+     ]
+    }
+   ],
+   "source": [
+    "#  degree and radian\n",
+    "\n",
+    "import math\n",
+    "\n",
+    "# convert degrees to radians \n",
+    "angle_rad = math.radians(180)\n",
+    "\n",
+    "# computing sine, cosine, and tangent \n",
+    "val = math.sin(angle_rad)\n",
+    "\n",
+    "print(f\"sin(180 degree): {val}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "7ed7af80",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "7.0\n",
+      "7.38905609893065\n"
+     ]
+    }
+   ],
+   "source": [
+    "# logarithms and exponents \n",
+    "\n",
+    "# pH calculation: pH = -log10[H+] / 1e-7 is a shorthand for 1.0 x 10^{-7}\n",
+    "h_ion_concentration = 1e-7\n",
+    "ph_level = -math.log10(h_ion_concentration)\n",
+    "print(ph_level)\n",
+    "\n",
+    "# eulter's number (e) and powers\n",
+    "growth = math.exp(2) # same as e^2\n",
+    "print(growth)"
+   ]
   }
  ],
  "metadata": {
