--- a/3.1_storing_data/storing_data_(good).ipynb
+++ b/3.1_storing_data/storing_data_(good).ipynb
@@ -1165,6 +1165,218 @@
    "source": [
     "## Footnotes"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "2f214b87",
+   "metadata": {},
+   "source": [
+    "## Additional Practice"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "7ad18f82",
+   "metadata": {},
+   "source": [
+    "__Tuples__ are a way to store data similar to lists, but one major difference is immutability.\n",
+    "- Tuples are defined using parentheses () instead of square brackets [ ]\n",
+    "- You can access elements in a tuple using indexes\n",
+    "- Immutability: once a tuple is created, its elements cannot be changed"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "4ab5f6a2",
+   "metadata": {},
+   "source": [
+    "Difference between Lists & Tuples:\n",
+    "- Lists are mutable, which means you can add, change, or remove elements\n",
+    "- Tuples are immutable, attempting to change an element will result in a TypeError"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "id": "574650d7",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1\n"
+     ]
+    }
+   ],
+   "source": [
+    "a = (1, 2, 3)\n",
+    "print(a[0])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "8083a2df",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "TypeError",
+     "evalue": "'tuple' object does not support item assignment",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
+      "\u001b[31mTypeError\u001b[39m                                 Traceback (most recent call last)",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[2]\u001b[39m\u001b[32m, line 5\u001b[39m\n\u001b[32m      2\u001b[39m a = (\u001b[32m1\u001b[39m, \u001b[32m2\u001b[39m, \u001b[32m3\u001b[39m)\n\u001b[32m      4\u001b[39m \u001b[38;5;66;03m# The following code will fail:\u001b[39;00m\n\u001b[32m----> \u001b[39m\u001b[32m5\u001b[39m \u001b[43ma\u001b[49m\u001b[43m[\u001b[49m\u001b[32;43m0\u001b[39;49m\u001b[43m]\u001b[49m = -\u001b[32m1\u001b[39m\n",
+      "\u001b[31mTypeError\u001b[39m: 'tuple' object does not support item assignment"
+     ]
+    }
+   ],
+   "source": [
+    "# Example of what you CANNOT do\n",
+    "a = (1, 2, 3)\n",
+    "\n",
+    "# The following code will fail:\n",
+    "a[0] = -1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "045ab642",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "TypeError",
+     "evalue": "unsupported operand type(s) for +=: 'int' and 'list'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
+      "\u001b[31mTypeError\u001b[39m                                 Traceback (most recent call last)",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[3]\u001b[39m\u001b[32m, line 5\u001b[39m\n\u001b[32m      2\u001b[39m a = (\u001b[32m1\u001b[39m, \u001b[32m2\u001b[39m, \u001b[32m3\u001b[39m)\n\u001b[32m      4\u001b[39m \u001b[38;5;66;03m# The following code will fail:\u001b[39;00m\n\u001b[32m----> \u001b[39m\u001b[32m5\u001b[39m \u001b[43ma\u001b[49m\u001b[43m[\u001b[49m\u001b[32;43m0\u001b[39;49m\u001b[43m]\u001b[49m\u001b[43m \u001b[49m\u001b[43m+\u001b[49m\u001b[43m=\u001b[49m\u001b[43m \u001b[49m\u001b[43m[\u001b[49m\u001b[32;43m10\u001b[39;49m\u001b[43m]\u001b[49m\n",
+      "\u001b[31mTypeError\u001b[39m: unsupported operand type(s) for +=: 'int' and 'list'"
+     ]
+    }
+   ],
+   "source": [
+    "# Example of what you CANNOT do\n",
+    "a = (1, 2, 3)\n",
+    "\n",
+    "# The following code will fail:\n",
+    "a[0] += [10]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "10698985",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[11, 2, 3]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Example of what LIST CAN DO\n",
+    "a = [1, 2, 3]\n",
+    "\n",
+    "# The following code will fail:\n",
+    "a[0] += 10\n",
+    "\n",
+    "print(a)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "a5f72802",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1, 2, 3]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Example of List append.()\n",
+    "# Adds a single item to the end of the list\n",
+    "\n",
+    "x = [1]\n",
+    "x.append(2)\n",
+    "x.append(3)\n",
+    "print(x)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "6ee635d6",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1, 2, 3, [4, 5, 6]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Using append.() to add a list to create a nested list\n",
+    "x = [1, 2, 3]\n",
+    "x.append([4, 5, 6])\n",
+    "print(x)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "0779d831",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1, 2, 3, 4, 5, 6]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Using .extend() to unpack the list and add each element individually\n",
+    "\n",
+    "x = [1, 2, 3]\n",
+    "x.extend([4, 5, 6])\n",
+    "print(x)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "b4141174",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1, 2, 3, 4, 5, 6]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# += operator is a shorthand for .extend()\n",
+    "x = [1, 2, 3]\n",
+    "x += [4, 5, 6]\n",
+    "print(x)"
+   ]
   }
  ],
  "metadata": {
