--- a/4.1_loops/loops_(need).ipynb
+++ b/4.1_loops/loops_(need).ipynb
@@ -551,6 +551,159 @@
     "        break\n",
     "    print(power_level)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b45deb60",
+   "metadata": {},
+   "source": [
+    "## Additional Practice "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "849ccf13",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0 Bread\n",
+      "1 Milk\n",
+      "2 Eggs\n",
+      "3 Cheese\n",
+      "4 Apples\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Question: Grocery Store Inventory\n",
+    "items = [\"Bread\", \"Milk\", \"Eggs\", \"Cheese\", \"Apples\"]\n",
+    "stock = [15, 0, 42, 5, 10]\n",
+    "\n",
+    "# Using enumerate to get both the index and the item name\n",
+    "for index, name in enumerate(items):\n",
+    "    print(index, name)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "0d9035e0",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Milk is currently out of stock!\n",
+      "Cheese is currently running low (only 5 left)\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Question: Grocery Store Inventory\n",
+    "items = [\"Bread\", \"Milk\", \"Eggs\", \"Cheese\", \"Apples\"]\n",
+    "stock = [15, 0, 42, 5, 10]\n",
+    "\n",
+    "# Using enumerate to get both the index and the item name\n",
+    "for index, name in enumerate(items):\n",
+    "    current_stock = stock[index]\n",
+    "    if current_stock == 0:\n",
+    "        print(f\"{name} is currently out of stock!\")\n",
+    "    elif current_stock < 10:\n",
+    "        print(f\"{name} is currently running low (only {current_stock} left)\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "280372bb",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Laptop now costs 1080.0\n",
+      "Mouse now costs 45.0\n",
+      "Keyboard now costs 72.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "products = [\"Laptop\", \"Mouse\", \"Keyboard\"]\n",
+    "prices = [1200, 50, 80]\n",
+    "\n",
+    "# Sample Exam Question: Updating Prices\n",
+    "#Scenario:\n",
+    "#You have a list of product names and a list of their current prices.\n",
+    "# Due to a promotion, you need to reduce the price of every item by 10%.\n",
+    "\n",
+    "for i in range(len(prices)):\n",
+    "    prices[i] = prices[i] * 0.9\n",
+    "    print(f\"{products[i]} now costs {prices[i]}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "0514c216",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Laptop now costs 1080.0\n",
+      "Mouse now costs 45.0\n",
+      "Keyboard now costs 72.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "# using enumerate \n",
+    "products = [\"Laptop\", \"Mouse\", \"Keyboard\"]\n",
+    "prices = [1200, 50, 80]\n",
+    "\n",
+    "# index gives the position, name gives the value from 'products'\n",
+    "for index, name in enumerate(products):\n",
+    "    # Use the index to update the corresponding price\n",
+    "    prices[index] = prices[index] * 0.9\n",
+    "    \n",
+    "    print(f\"{name} now costs {prices[index]}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "21d75e9b",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Alarm: Anomalous reading of 99.9 detected at Time Step 3\n",
+      "Alarm: Anomalous reading of 105.2 detected at Time Step 6\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Sample Example: Detecting Sensor Anomalies\n",
+    "\n",
+    "# Experimental data\n",
+    "readings = [22.5, 23.1, 99.9, 22.8, 23.0, 105.2] \n",
+    "threshold = 50.0\n",
+    "\n",
+    "# Using enumerate to track the 'Time Step' (index) and the 'Value' simultaneously\n",
+    "for i, value in enumerate(readings, 1):\n",
+    "    if value > threshold:\n",
+    "        print(f\"Alarm: Anomalous reading of {value} detected at Time Step {i}\")\n",
+    "\n"
+   ]
   }
  ],
  "metadata": {
