--- a/4.2_loops__exercises/loops_(good)_exercises.ipynb
+++ b/4.2_loops__exercises/loops_(good)_exercises.ipynb
@@ -45,6 +45,30 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 1,
+   "id": "e663f4a6",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1, 9, 25, 49, 81]\n"
+     ]
+    }
+   ],
+   "source": [
+    "odd = []\n",
+    "for x in range(0,10):\n",
+    "    if x % 2 == 0:\n",
+    "        continue\n",
+    "\n",
+    "    odd.append(x**2)\n",
+    "print(odd)"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "e5b9dc7b",
    "metadata": {},
