--- a/7.1_plotting/plotting_(good).ipynb
+++ b/7.1_plotting/plotting_(good).ipynb
@@ -594,6 +594,33 @@
    "source": [
     "## 6.4 Pie charts"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "0f42f7ef",
+   "metadata": {},
+   "source": [
+    "## Other Notes"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "858eda10",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Using ax and fig \n",
+    "\n",
+    "import matplotlib.pyplot as plt\n",
+    "\n",
+    "x = [0, 1, 2]\n",
+    "y = [0, 1, 4]\n",
+    "fig, (ax1, ax2) = plt.subplots(1, 2)\n",
+    "ax1.plot(x, y, 'b-')\n",
+    "ax2.plot(x, y, 'g--')\n",
+    "plt.show()\n"
+   ]
   }
  ],
  "metadata": {
