--- a/2.1_fundamentals/fundamentals_(good).ipynb
+++ b/2.1_fundamentals/fundamentals_(good).ipynb
@@ -1466,6 +1466,211 @@
    "source": [
     "## Footnotes"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ddc87c17",
+   "metadata": {},
+   "source": [
+    "## More Practice"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e12e975d",
+   "metadata": {},
+   "source": [
+    "Membership Testing"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "64fd309c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "buffer_components = ['Tris', 'EDTA', 'NaCl', 'Tween-20']\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "b524c443",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "'NaCl' in buffer_components"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "85695283",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "'SDS' not in buffer_components"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "be93ecb8",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# string membership\n",
+    "\n",
+    "dna_sequence = 'ATGCGTACGATCGTAG'\n",
+    "\n",
+    "'ATG' in dna_sequence"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "adadbbc3",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "('ATG' in dna_sequence) and ('TAG' in dna_sequence)\n",
+    "# python checks for first motif and checks for second and confirms if both are true"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "id": "c214ed0e",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2.234\n"
+     ]
+    }
+   ],
+   "source": [
+    "x = '1.234'\n",
+    "x= float(x)\n",
+    "y = x + 1\n",
+    "print(y)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "id": "d725280c",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "False\n"
+     ]
+    }
+   ],
+   "source": [
+    "measured_concentration = 0.1 * 3\n",
+    "target_concentration = 0.3\n",
+    "\n",
+    "print(measured_concentration == target_concentration) \n",
+    "# This outputs: False"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "id": "5878cf50",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "True\n"
+     ]
+    }
+   ],
+   "source": [
+    "eps = 1e-10\n",
+    "is_equal = abs(measured_concentration - target_concentration) < eps\n",
+    "print(is_equal)\n",
+    "# This outputs: True"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "id": "9a7fce9a",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "a = 0.1\n",
+    "a3 = 0.3\n",
+    "eps = 1e-10\n",
+    "\n",
+    "# Now we check the logic\n",
+    "abs(a * 3 - a3) < eps"
+   ]
   }
  ],
  "metadata": {
