--- a/3.1_storing_data/storing_data_(need).ipynb
+++ b/3.1_storing_data/storing_data_(need).ipynb
@@ -1123,6 +1123,230 @@
    "source": [
     "## Footnotes"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "baac2caa",
+   "metadata": {},
+   "source": [
+    "## More Practice"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "03083e6c",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "10\n",
+      "50\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Indexing\n",
+    "import numpy as np\n",
+    "np_array = np.array([10, 20, 30, 40, 50])\n",
+    "\n",
+    "print(np_array[0])   # Output: 10 (Accesses the first element)\n",
+    "print(np_array[-1])  # Output: 50 (Accesses the last element)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "7a6e8935",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "10\n",
+      "50\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Indexing\n",
+    "list = [10, 20, 30, 40, 50]\n",
+    "\n",
+    "print(list[0])\n",
+    "print(list[-1])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "afa889a3",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[10 20]\n",
+      "[10 30 50]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Slicing\n",
+    "import numpy as np\n",
+    "np_array = np.array([10, 20, 30, 40, 50])\n",
+    "\n",
+    "subset = np_array[0:2]\n",
+    "print(subset)\n",
+    "print(np_array[::2]) # Prints every second element"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "id": "b9786e43",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1 3 5 7 9]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Slicing\n",
+    "data = np.array(range(1, 11))\n",
+    "result = data[::2]\n",
+    "print(result)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "id": "1ab07e7b",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[35 40 38]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Masking Conditional Subsetting\n",
+    "import numpy as np\n",
+    "\n",
+    "temp_c = np.array([21, 35, 18, 40, 22, 10, 38])\n",
+    "\n",
+    "# The Question\n",
+    "hot_mask = temp_c > 30\n",
+    "\n",
+    "# Apply the Mask to Subset\n",
+    "hot_temps = temp_c[hot_mask]\n",
+    "\n",
+    "print(hot_temps)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "id": "e87eb0df",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[21 22]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Masking Conditional Subsetting (Multiple Conditions)\n",
+    "# Example Question: Warm Temperatures between 20 and 30 degrees celsisus\n",
+    "\n",
+    "import numpy as np\n",
+    "\n",
+    "temp_c = np.array([21, 35, 18, 40, 22, 10, 38])\n",
+    "\n",
+    "warm_mask = (temp_c >= 20) & (temp_c <= 30)\n",
+    "\n",
+    "warm_temps = temp_c[warm_mask]\n",
+    "\n",
+    "print(warm_temps)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "id": "479f660a",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "21\n",
+      "22\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Masking Conditional Subsetting (Multiple Conditions)\n",
+    "# Example Question: Warm Temperatures between 20 and 30 degrees celsisus\n",
+    "\n",
+    "import numpy as np\n",
+    "\n",
+    "temp_c = np.array([21, 35, 18, 40, 22, 10, 38])\n",
+    "\n",
+    "for i in temp_c:\n",
+    "    if i >= 20 and i <= 30:\n",
+    "        print(i)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "id": "e61c7e1c",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[70 88 95 81]\n",
+      "[92 81 75]\n",
+      "[[85 90]\n",
+      " [70 88]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Subsetting Multi-dimensional Arrays\n",
+    "\n",
+    "grades = np.array([\n",
+    "    [85, 90, 78, 92],\n",
+    "    [70, 88, 95, 81],\n",
+    "    [60, 72, 68, 75]\n",
+    "])\n",
+    "\n",
+    "# Extract the scores of the second student (3 students - rows, 4 subjects - columns)\n",
+    "print(grades[1, :])\n",
+    "\n",
+    "# Extract the scores for the last subject for all students\n",
+    "last_sub = grades[:, 3]\n",
+    "print(last_sub)\n",
+    "\n",
+    "# Extract a sub-grid containing the first 2 subjects for the first 2 students\n",
+    "print(grades[0:2, 0:2]) # or grades[:2, :2] # both selects (row, column)"
+   ]
   }
  ],
  "metadata": {
